--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# actuator is used to check the health our application
+info.application.name=Springit
+info.application.description=Reddit Clone using Spring Boot 2
+info.application.version=0.0.1
+
+management.endpoints.web.exposure.include=*
+info.endpoint.health.show-details=always
 
