--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ info.application.version=0.0.1
 management.endpoints.web.exposure.include=*
 info.endpoint.health.show-details=always
 
+# h2-settings
+spring.h2.console.enabled=true
+
+# renaming the default name
+spring.datasource.name=springit
+
+#JPA & Hibernate
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+
