adding command line runner in our app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,34 @@ info.endpoint.health.show-details=always
 
 # h2-settings
 spring.h2.console.enabled=true
-
-# renaming the default name
+#
+## renaming the default name
 spring.datasource.name=springit
 
+
+# MySQL settings
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/springit?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+# spring boot 2 is required for all non in-memory db
+# for data initialization scripts (data initialization works only for embedded databases h2,hsqldb...) (schema-mysql.sql, data-mysql.sql or whatever is the )
+# spring.datasource.initialization-mode=always
+
+
+
+
 #JPA & Hibernate
+#DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto"
+#property. Defaults to "create-drop" when using an embedded database and no
+#schema manager was detected. Otherwise, defaults to "none".
+# create | create-drop | none | update | validate
+#spring.jpa.hibernate.ddl-auto=
+
+
+
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 
